k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 051826710466.dkr.ecr.us-east-1.amazonaws.com/frontend:latest
        ports:
        - containerPort: 4173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: 
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 4173
      targetPort: 4173
